fix menu z-index

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ header{
   width: 100%;
   height: 250px;
   position: absolute;
-  z-index: 3000;
+  z-index: 2000;
 }
 .menu_nav li{
   text-decoration: none;
